# pylife

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  3rd-party-licenses.txt  CHANGELOG.md  CODINGSTYLE.md  CONTRIBUTING.md  INSTALLATION.md  Jenkinsfile  LICENSE  MANIFEST.in  NEWS-2.0.md  NOTICE  README.md  activate_venv.bat  build_docs.sh  create_environment.cmd  create_environment.sh  environment.yml  extra_requirements.txt  install_pylife.bat  install_pylife_linux.sh  install_pylife_win.bat  jenkins.cmd  profile_run.py  pyproject.toml  pytest.ini  r  requirements.txt  requirements_CONDA.txt  requirements_PIP.txt  run_build_doc.bat  run_build_doc.sh  setup.cfg  setup.cmd  setup.py  sonar-project.properties  (+1 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  pypi-deploy-odbclient.yml  pypi-deploy-odbserver.yml  pypi-deploy.yml  pytest-python-dev.yml  pytest.yml  wheelbuild-benchmark-test.yml
batch_scripts/: build_docs.bat  build_docs.sh  create_pylife_environment.bat  create_pylife_environment.sh  jenkins.bat  prepare-commit-msg  run_code_analysis.bat  run_pylife_tests.bat  run_test_cov_analysis.bat  start_Jupyter_notebook.bat  start_spyder.bat  test_cov_analysis.py
benchmarks/: conftest.py  generate_time_signal.py  test_fkm_chap4.py  test_meanstress.py  test_rainflow_counters.py
binder/: apt.txt  environment.yml  requirements.txt  start
demos/: .gitignore  FEM_io.ipynb  LifeTimeCalc.ipynb  LifeTimeCalc.py  Nominal_Stress_Approach.ipynb  Rainflow_SOFC.ipynb  VMAP_io.ipynb  __init__.py  bayes_dict.json  bayes_dict_5.json  bayes_multi_simulation.ipynb  bayes_tool.ipynb  collectives.p  helper_functions.py  hotspot_beam.ipynb  hotspot_plate.ipynb  import_mesh_abaqus.ipynb  import_mesh_ansys.ipynb  import_mesh_vmap.ipynb  index.ipynb  lifetime_calc.ipynb  lifetime_calc.py  load_collective.ipynb  local_stress.py  local_stress_with_FE.ipynb  miner_rule.ipynb  psd_optimizer.ipynb  psd_smoother.py  pyLife_TsFresh_Example.ipynb  rainflow.ipynb  rainflow_counting.ipynb  rainflow_counting.py  ramberg_osgood.ipynb  rf_dict.p  strength_analysis.ipynb  strength_analysis.py  stress-strength.ipynb  stress_gradient.ipynb  stress_strength.ipynb  time_series_handling.ipynb  (+4 more)
demos/data/: kt1.rst  kt1.vmap
demos/fkm_linear/: multiple_nodes_fkm_linear.ipynb  woehler_predictor.ipynb
demos/fkm_nonlinear/: .gitignore  fkm_nonlinear.ipynb  fkm_nonlinear_full.ipynb  fkm_nonlinear_mesh.ipynb  index.ipynb  scatter_woehler_curve.ipynb
demos/performance/: benchmark_rainflow.py  process_benchmark.py  wrapper.py
demos/pyVista/: pyVista.py
doc/: Makefile  requirements.txt
doc/source/: codingstyle.rst  conf.py  cookbook.rst  data_model.rst  index.rst  installation.rst  reference.rst  signal_api.rst  user_guide.rst  variable_names.rst  vmap.rst
docs/: 3rd-party-licenses.md  3rd-party-licenses.txt  CHANGELOG.md  CODINGSTYLE.md  CODINGSTYLE.rst  INSTALLATION.md  LICENSE.md  NEWS-2.0.md  NOTICE.md  broadcaster.rst  codingstyle.rst  conf.py  cookbook.rst  data_model.rst  index.rst  installation.rst  news.rst  reference.rst  requirements.txt  signal_api.rst  tutorials.rst  user_guide.rst
docs/demos/: 99-lifetime_calc.nblink  VMAP_io.nblink  data  fkm_nonlinear.nblink  hotspot_beam.nblink  hotspot_plate.nblink  import_mesh_abaqus.nblink  import_mesh_ansys.nblink  import_mesh_vmap.nblink  lifetime_calc.nblink  local_stress_with_FE.nblink  psd_optimizer.nblink  ramberg_osgood.nblink  stress-strength.nblink  stress_gradient.nblink  stress_strength.ipynb  time_series_handling.nblink  woehler_analyzer.nblink
docs/general/: signal.rst
docs/materialdata/: woehler.rst
docs/materiallaws/: hookeslaw.rst  notch_approximation_laws.rst  true_stress_strain.rst
docs/mesh/: gradient3D.rst  hotspot.rst  mesh.rst  meshsignal.rst  plainmesh.rst  surface3D.rst
docs/strength/: damage_parameters.rst  failure_probability.rst  fatigue.rst  fkm_linear.rst  fkm_load_distribution.rst  fkm_nonlinear.rst  fkm_nonlinear_damage_calculator.rst  fkm_nonlinear_parameter_calculations.rst  helpers.rst  meanstress.rst  sn_curve.rst  woehler_fkm_nonlinear.rst
docs/stress/: collective.rst  index.rst  load_collective.rst  load_histogram.rst  rainflow.rst  timesignal.rst
docs/tools/: index.rst
docs/tutorials/: fkm_nonlinear.rst  fkm_nonlinear_full.nblink  import_meshes.rst  index.rst  load_collective.nblink  stress-strength.rst  stress_strength.nblink  woehler_curve.nblink
docs/utils/: functions.rst  histogram.rst  probability_data.rst
docs/vmap/: vmap_export.rst
pylife/: __init__.py  _version.py
pylife/core/: broadcaster.py  data_validator.py  signal.py
pylife/materialdata/: Requirements.txt
pylife/materiallaws/: __init__.py  rambgood.py  true_stress_strain.py  woehlercurve.py
pylife/mesh/: gradient.py  hotspot.py  meshmapping.py  meshplot.py  meshsignal.py
pylife/strength/: failure_probability.py  fatigue.py  helpers.py  infinite.py  meanstress.py  miner.py  sn_curve.py
pylife/stress/: .gitignore  README.md  equistress.py  frequencysignal.py  gradient.py  histogram.py  rainflow.c  (+4 more)
rust/: Cargo.toml
rust/src/: lib.rs
tests/: __init__.py  conftest.py
tools/: README.md
tools/odbclient/: .coveragerc  .gitignore  AUTHORS.rst  README.md  demo.ipynb  pyproject.toml  setup.cfg  setup.py
tools/odbclient/src/odbclient/: __init__.py  odbclient.py
tools/odbclient/tests/: beam_3d_hex_quad-2022.odb  beam_3d_hex_quad-2023.odb  beam_3d_hex_quad-2024.odb  beam_3d_hex_quad.odb  connectivity.csv  connectivity.json  create_server_envs.sh  history_output_test-2022.odb  history_output_test-2023.odb  history_output_test-2024.odb  history_output_test.odb  midsized-2022.odb  midsized-2023.odb  midsized-2024.odb  midsized-reference.csv  node_coordinates.csv  stress_element_nodal.csv  stress_integration_point.csv  test_odbclient.py
tools/odbserver/: .coveragerc  AUTHORS.rst  README.md  setup.cfg  setup.py  test-requirements.txt
tools/odbserver/odbserver/: __init__.py  __main__.py  interface.py
tools/odbserver/tests/: conftest.py
(+396 files in other folders)
